miniextendr-macros/tests/ui/impl_r6_finalize_wrong_system.stderr
error: #[r6(finalize)] is only valid for R6 class systems
  --> tests/ui/impl_r6_finalize_wrong_system.rs:11:8
   |
11 |     fn destroy(self) {}
   |        ^^^^^^^
